<resources>
    <string name="app_name">CourseBookingApp</string>
    <string name="welcome_text">Welcome to</string>
    <string name="app_name_text">Course Booking App</string>
    <string name="admin_button_text">admin</string>
    <string name="teacher_button_text">Instructor</string>
    <string name="student_button_text">student</string>
    <string name="login_button_text">login</string>
    <string name="signup_button_text">Sign up</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_reenter_password">Reenter Password</string>
    <string name="hint_name">Name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>