<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="32dp"
    tools:context="com.example.android.coursebookingapp.screens.mainFragments.IntroductionFragment">

    <include
        android:id="@+id/welcome_group"
        layout="@layout/introduction_sub_layout"/>

    <!--         app:checkedButton="@+id/current_selection" -->
    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/role_toggle_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/welcome_group"
        app:singleSelection="true"
        app:selectionRequired="true">

        <Button
            android:id="@+id/admin_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="130dp"
            android:layout_height="88dp"
            android:text="@string/admin_button_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:text="Admin" />

        <Button
            android:id="@+id/instructors_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="130dp"
            android:layout_height="88dp"
            android:text="@string/teacher_button_text"
            android:textAlignment="center"
            android:textColor="#000000" />

        <Button
            android:id="@+id/student_button"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="130dp"
            android:layout_height="88dp"
            android:text="@string/student_button_text"
            android:textColor="@color/black" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <LinearLayout
        android:id="@+id/option_groupview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/role_toggle_buttons">

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:layout_marginRight="8dp"
            tools:text="Login" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_button_text"
            android:textAlignment="center"
            android:textColor="@android:color/white" />

    </LinearLayout>

</RelativeLayout>
</layout>