<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- ".IntroductionFragment" -->

    <LinearLayout
        android:id="@+id/details_container_inputFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/form_top_margin"
        android:orientation="vertical"
        android:paddingLeft="@dimen/fields_container_padding"
        android:paddingRight="@dimen/fields_container_padding"
        android:paddingBottom="@dimen/form_top_margin"
        tools:context="com.example.android.coursebookingapp.screens.mainFragments.LoginSignupFragment">

        <TextView
            android:id="@+id/login_signup_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:textAllCaps="true"
            android:textSize="18sp"
            tools:text="Student Login"/>

        <!-- Name category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_fragment_spacing"
            android:visibility="gone"
            android:hint="@string/hint_name">

            <!-- Reenter password field-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Username category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/details_fragment_spacing"
            android:hint="@string/hint_password">

            <!-- Password field-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Reenter password category -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reenterPasswordOutlinedTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/details_fragment_spacing"
            android:hint="@string/hint_reenter_password">

            <!-- Reenter password field-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_reenter_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/signup_login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/details_fragment_spacing"
                android:textColor="@android:color/white"
                tools:text="@string/login_button_text" />


        </LinearLayout>
        <!-- How does the Relative Layout work ? -->
    </LinearLayout>
</layout>